--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html lang="id">
-<head>
+ 
+  <head>
   <meta charset="UTF-8">
   <title>AstralCosmic - Team Rocket SFS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&amp;family=Poppins:wght@300;400&amp;display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -96,33 +96,43 @@
       font-size: 14px;
       margin-top: 50px;
     }
+    .btn-secondary {
+  border: 2px solid #ff00ff;
+  color: #ff00ff;
+  box-shadow: 0 0 15px #ff00ff;
+}
+
+.btn-secondary:hover {
+  background: #ff00ff;
+  color: black;
+  box-shadow: 0 0 40px #ff00ff;
+}
   </style>
-</head>
-
-<body>
-
+ </head>
+ 
+  <body>
+  
   <header>
-    <h1>🚀 AstralCosmic</h1>
-    <p>Team Rocket Spaceflight Simulator yang menjelajah galaksi dan membangun roket epik bersama.</p>
-
-    <a class="btn" href="https://whatsapp.com/channel/0029VbBZnDNCsU9Gs8R4H00u" target="_blank">
-      🔗 Gabung Saluran WhatsApp
-    </a>
+   <h1>🚀 AstralCosmic</h1>
+   <p>Team Rocket Spaceflight Simulator yang menjelajah galaksi Makasih Buat Team Curiosity.</p>
+   <a class="btn" href="https://whatsapp.com/channel/0029VbBZnDNCsU9Gs8R4H00u" target="_blank"> 🔗 Gabung Saluran WhatsApp </a>
+   <br>
+   <br>
+   <a class="btn" href="https://play.google.com/store/apps/details?id=com.StefMorojna.SpaceflightSimulator" target="_blank"> 🛍 Link Download Game </a> 
+   <br>
+   <br>
+   <a class="btn btn-secondary" href="https://store.steampowered.com/app/1718870/Spaceflight_Simulator/" target="_blank"> 🛍 Versi Steam Bayar </a>
   </header>
-
+  <br>
   <section>
-    <h2>🌌 Tentang Kami</h2>
-    <p>AstralCosmic adalah komunitas SFS yang fokus pada desain roket futuristik, misi planet, dan eksplorasi luar angkasa kreatif.</p>
+   <h2>🌌 Tentang Kami</h2>
+   <p>AstralCosmic adalah komunitas SFS yang fokus pada desain roket futuristik, misi planet, dan eksplorasi luar angkasa kreatif.</p>
   </section>
-
   <section>
-    <h2>🔥 Visi Kami</h2>
-    <p>Menjadi tim Spaceflight Simulator paling solid dan inovatif di galaksi Indonesia.</p>
+   <h2>🔥 Visi Kami</h2>
+   <p>Menjadi tim Spaceflight Simulator paling solid dan inovatif di galaksi Indonesia.</p>
   </section>
+  <footer>© 2026 AstralCosmic Team | Built for SFS Community</footer>
+ </body>
 
-  <footer>
-    © 2026 AstralCosmic Team | Built for SFS Community
-  </footer>
-
-</body>
 </html>
